added title to index

--- a/predictor-index.html
+++ b/predictor-index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 <head>
+	<title>Testing 1 2 3</title>
 	<meta charset="utf-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet"  href="css/reset.css" />
@@ -8,8 +9,7 @@
 	
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 	<!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>-->
-    <script src="js/jquery-1.8.3.min.js"></script>
-
+   
 
 
 </head>
@@ -24,11 +24,7 @@
 			<div id="s1" class="emptySlot"><p>+</p></div>
 			<div id="s1" class="emptySlot"><p>+</p></div>
 			<div id="s1" class="emptySlot"><p>+</p></div>
-			<div id="s1" class="emptySlot"><p>+</p></div>
-			<div id="s1" class="emptySlot"><p>+</p></div>
-			<div id="s1" class="emptySlot"><p>+</p></div>
-			<div id="s1" class="emptySlot"><p>+</p></div>
-			<div id="s1" class="emptySlot"><p>+</p></div>
+			<div id="s1" class="emptySlot"><p>+</p></div><div id="s1" class="emptySlot"><p>+</p></div>
 			<div id="s1" class="emptySlot"><p>LESS IMPORTANT</p></div>
 		</div>
 		
